--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
       <button id="abrir" class="abrir-menu"><i class="fa-solid fa-bars"></i></button>
       <nav class="nav" id="nav">
          <button id="cerrar" class="cerrar-menu"><i class="fa-solid fa-xmark"></i></button>
-        <ul class="nav-list">
-
-        <li> <a class="barra" href="index.html">Inicio</a></li>
-        <li></li><a class="barra" href="https://api.whatsapp.com/send?phone=">Contacto</a></li>
+        <div class="barra-fija">
+         <ul class="nav-list">
+          <li><a class="barra" href="https://api.whatsapp.com/send?phone=">Contacto</a></li>
+      
       </ul>
+    </div>
       </nav>
       
     </header>
@@ -62,7 +63,7 @@
         <br />
         <p class="segundoP">
            Debo comentar que estoy muy agradecido con el equipo de 
-           <span>CODIGO PA LANTE </span> por brindarnos esta gran y amena oportunidad de introducirnos en lo que es desarrollo web; han sido unos interesantes y enriquecidores primeros pasos que no tengo dudas nos habra servido de base para poder profundizar en nuestra formacion. Muchas gracias!
+           <span>CODIGO PA LANTE </span> por brindarme esta gran y amena oportunidad de introducirme en lo que es desarrollo web; han sido unos interesantes y enriquecidores primeros pasos que no tengo dudas nos habra servido de base para poder profundizar en nuestra formacion. Muchas gracias!
         </p>
       </section>
       <div class="iconos">
