--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <br />
         <p class="segundoP">
            Debo comentar que estoy muy agradecido con el equipo de 
-           <span>CODIGO PA LANTE </span> por brindarme esta gran y amena oportunidad de introducirme en lo que es desarrollo web; han sido unos interesantes y enriquecidores primeros pasos que no tengo dudas nos habra servido de base para poder profundizar en nuestra formacion. Muchas gracias!
+           <span>CODIGO PA LANTE </span> por brindarme esta gran y amena oportunidad de introducirme en lo que es desarrollo web; han sido unos interesantes y enriquecidores primeros pasos que no tengo dudas habra servido de base para poder profundizar en mi formacion. Muchas gracias!
         </p>
       </section>
       <div class="iconos">
