--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          <button id="cerrar" class="cerrar-menu"><i class="fa-solid fa-xmark"></i></button>
         <div class="barra-fija">
          <ul class="nav-list">
-          <li><a class="barra" href="https://wa.me/541168889467text=Hola soy Armando, saludos!">Contacto</a></li>
+          <li><a class="barra" href="https://wa.me/541168889467text?=Hola%20soy%20Armando,%20 saludos!">Contacto</a></li>
       
       </ul>
     </div>
