actualizacion lik y ws

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          <button id="cerrar" class="cerrar-menu"><i class="fa-solid fa-xmark"></i></button>
         <div class="barra-fija">
          <ul class="nav-list">
-          <li><a class="barra" href="https://wa.me/541168889467text?=Hola%20soy%20Armando,%20 saludos!">Contacto</a></li>
+          <li><a class="barra" href="https://api.whatsapp.com/send?phone=1168889467">Contacto</a></li>
       
       </ul>
     </div>
@@ -56,7 +56,7 @@
        Mi nombre es <span> Keeynnyth Armando Donado Changarotty</span>, soy de Venezuela y vivo en Buenos Aires, Argentina hace un par de años. Soy Abogado de profesion y un amante del baloncesto que decidio dar un vuelco total a su perfil laboral, iniciandose en este innovador y entusiasta mundo IT.
       </p>
 
-      <div class="descarga"><a id="boton" href="">Descargar CV</a></div>
+      <div class="descarga"><a id="boton" href="./pdf_20230726_202952_0000.pdf.png" download="cv_kedonado">Descargar CV</a></div>
 
       <section class="hablemos">
         <h3>Hablemos!</h3>
@@ -70,10 +70,10 @@
         <a href="mailto:kedonado@hotmail.com">
           <img src="./imagenes/email.png" width="40px" alt="email" />
         </a>
-        <a href="https://github.blog/">
+        <a href="https://github.com/keeynnyth">
           <img src="./imagenes/github.png" width="40px" alt="" />
         </a>
-        <a href="https://www.linkedin.com/in/karmandodonado/">
+        <a href="https://www.linkedin.com/in/kedonado/">
           <img src="./imagenes/linkedin.png" width="40px" alt=""
         /></a>
       </div>
