--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          <button id="cerrar" class="cerrar-menu"><i class="fa-solid fa-xmark"></i></button>
         <div class="barra-fija">
          <ul class="nav-list">
-          <li><a class="barra" href="https://api.whatsapp.com/send?phone=5491126079467">Contacto</a></li>
+          <li><a class="barra" href="https://api.whatsapp.com/send?phone=5491126079467&text=Hola, vi tu perfil y me gustaria contactarte">Contacto</a></li>
       
       </ul>
     </div>
