--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
       </section>
       <h1>Hola! Soy K. Armando Donado</h1>
       <p class="primerP">
-       Mi nombre es <span> Keeynnyth Armando Donado Changarotty</span>, soy de Venezuela y vivo en Buenos Aires, Argentina hace un par de años. Soy Abogado de profesion y un amante del baloncesto que decidio dar un vuelco total a su perfil laboral, iniciandose en este innovador y entusiasta mundo IT.
+       Mi nombre es <span> Keeynnyth Armando Donado Changarotty</span>, soy de Venezuela y vivo en Buenos Aires, Argentina hace un par de años. Soy Abogado de profesion y estudiante de Analisis de Sistemas, ademas de ser un amante del baloncesto que decidio dar un vuelco total a su perfil laboral, iniciandose en este innovador y entusiasta mundo IT, buscando especializarme como Full Stack.
       </p>
 
-      <div class="descarga"><a id="boton" href="./pdf_20230726_202952_0000.pdf.png" download="cv_kedonado">Descargar CV</a></div>
+      <div class="descarga"><a id="boton" href="./imagenes/Copia de keeynnyth armando donado_20230928_162638_0000.pdf" download="cv_kedonado">Descargar CV</a></div>
 
       <section class="hablemos">
-        <h3>Hablemos!</h3>
+        <h3>Sobre mi</h3>
         <br />
         <p class="segundoP">
-           Debo comentar que estoy muy agradecido con el equipo de 
-           <span>CODIGO PA LANTE </span> por brindarme esta gran y amena oportunidad de introducirme en lo que es desarrollo web; han sido unos interesantes y enriquecidores primeros pasos que no tengo dudas habra servido de base para poder profundizar en mi formacion. Muchas gracias!
+          Mi nombre es <span> Keeynnyth Armando Donado Changarotty</span>, soy de Venezuela y vivo en Buenos Aires, Argentina hace un par de años. Soy Abogado de profesion y estudiante de Analisis de Sistemas, ademas de ser un amante del baloncesto que decidio dar un vuelco total a su perfil laboral, iniciandose en este innovador y entusiasta mundo IT, buscando especializarme como Full Stack.
+          
         </p>
       </section>
       <div class="iconos">
