--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
         <h3>Sobre mi</h3>
         <br />
         <p class="segundoP">
-          Mi nombre es <span> Keeynnyth Armando Donado Changarotty</span>, soy de Venezuela y vivo en Buenos Aires, Argentina hace un par de años. Soy Abogado de profesion y estudiante de Analisis de Sistemas, ademas de ser un amante del baloncesto que decidio dar un vuelco total a su perfil laboral, iniciandose en este innovador y entusiasta mundo IT, buscando especializarme como Full Stack.
-          
+          Me entusiasma enormemente la programación. Disfruto explorando los matices de varios lenguajes, desde los robustos como C++ y Java hasta los versátiles como Python y JavaScript.
         </p>
       </section>
       <div class="iconos">
